--- a/index.html
+++ b/index.html
@@ -31,30 +31,122 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="repeatedcodeinverse" class="anchor" href="#repeatedcodeinverse" aria-hidden="true"><span class="octicon octicon-link"></span></a>RepeatedCodeInverse</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>written by Yu-Sheng Chen</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>Convert a paragragh of codes or words with regular rules into a function with for loop and statements.
+找到數行程式碼中數字遞迴的規則，產生"以迴圈產生該原始碼的程式"</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>當使用硬體描述語言開發數位電路時，因為電路的特色就是許多I/O 控制是平行在運行的. 因此常常會需要大量的宣告變數，以及指定值給這些變數。舉例來說，工作上我們若需要宣告64通道的I/O，並將這些通道訊號指定給特定的前級訊號。在原始碼上常常會看到這樣格式的內容：</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<pre><code>  #written in Verilog
+  #register declaration
+  reg [1:0] pin0;
+  reg [1:0] pin1;
+  reg [1:0] pin2;
+  //...
+  reg [1:0] pin63;
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+  #pin assignment
+  always@(*)begin
+    pin0 &lt;= 2'd0;
+    pin1 &lt;= 2'd0;
+    pin2 &lt;= 2'd0;
+    //...
+    pin63 &lt;= 2'd0;
+  end
+</code></pre>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>程式設計師為了節省時間，常常會開發小程式來協助工作上大量重覆的動作。要寫出上列的程式碼，常常會用其他語言(如Python)來產生該verilog 語法：</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<pre><code>for i in range(64):
+  print 'reg [1:0] pin' + str(i)
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+print 'always@(*)begin'
+for i in range(64):
+  print '\tpin' + str(i) + '&lt;= 2\'d0'
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+print 'end'
+</code></pre>
+
+<p>這樣短短幾行就可以產生出我們想要的程式碼了，這真是一件很美好的事情。原本需要不斷的複製貼上，然後再一一修改變數的動作都免了，省了非常多的時候。</p>
+
+<p>然而，工作上我們最常做的時候反而不是從零開始撰寫程式，而可能是承接前人的專案，或是將自己過去開發的程式再擴充、修改。比如說，我們可能要將64通道的系統擴充到128的系統，或是一群i/o加上一個可控制的遮罩，以供測試用。有時運氣好，我們可以找到之前寫的小程式，只要小小地修改參數後就可以輕鬆的完成這份工作。若是找不到或是不想花時間去檔案海中找，那重新寫一份可能是次快(搞不好更快)的方法。而在這個repo中開發的程式，可以幫助程式設計師找到程式碼中的遞迴邏輯，減少程式設計師重新寫符合原程式碼模式的時間。</p>
+
+<p>延續之前的程式例子，我們想要把原本的程式碼改成如下：</p>
+
+<pre><code>  #written in Verilog
+  #register declaration
+  reg [1:0] pin0;
+  reg [1:0] pin1;
+  reg [1:0] pin2;
+  //...
+  reg [1:0] pin127;
+
+  #pin assignment
+  always@(*)begin
+    pin0 &lt;= enable[0]?2'd0:1;
+    pin1 &lt;= enable[1]?2'd0:1;
+    pin2 &lt;= enable[2]?2'd0:1;
+    //...
+    pin127 &lt;= enable[127]?2'd0:1;
+  end
+</code></pre>
+
+<p>可以看到我們將通道擴充了(64-&gt;128)，此外為了每個pin都能獨立測試，在每個pin上都各別加上了一個開關。這個動作在某些工作中滿常見的。一般而言，若是沒有原始產生該段程式碼的開發程式，我們還是可以從頭去撰寫，這估計也花不了多少時間，然而，重新寫作這件事情本身也是一個重覆的動作不是嗎？當然要有法子來幫助懶惰的程式設計師減輕我們的負擔啦。RepeatedCodeInverse就是基於這個目的下去開發的！</p>
+
+<p>使用上，分成幾個步驟：
+1、將想要改寫的程式碼獨立擷取出來到一文字檔
+2、執行RepeatedCodeInverse工具，將步驟一的文字檔作為程式的輸入，
+3、程式判斷出該段程式的遞迴規律，並輸出以特定語法(預設為python)的程式碼
+4、使用者去修改該程式碼，改變自己想要的變數，在本文件所列舉中的例子為通道數，以及加入遮罩
+5、輸出程式碼，並貼回自己的程式。</p>
+
+<p>example1:(written in python)</p>
+
+<pre><code>from fn_inverse_verilog import ContinuousNumList2Rule, RepeatedCodeInverse
+#read in file
+filename = 'example1.txt'
+f = open(filename, 'r')
+AllLine = f.readlines()
+RepeatedCodeInverse(AllLine)
+</code></pre>
+
+<p>程式的輸出：</p>
+
+<pre><code>for i in range(64):
+    print 'reg [' + str( 1+i*(0)) + ':' + str( 0+i*(0)) + '] pin' + str( 0+i*(1)) + ''
+</code></pre>
+
+<p>若要將程式修改為128 的版本，就只要修改對應的參數即可：</p>
+
+<pre><code>for i in range(128):
+    print 'reg [' + str( 1+i*(0)) + ':' + str( 0+i*(0)) + '] pin' + str( 0+i*(1)) + ''
+</code></pre>
+
+<p>example2:(written in python)</p>
+
+<pre><code>from fn_inverse_verilog import ContinuousNumList2Rule, RepeatedCodeInverse
+#read in file
+filename = 'example2.txt'
+f = open(filename, 'r')
+AllLine = f.readlines()
+RepeatedCodeInverse(AllLine)
+</code></pre>
+
+<p>程式的輸出：</p>
+
+<pre><code>for i in range(64):
+    print ' pin' + str( 0+i*(1)) + '&lt;= ' + str( 2+i*(0)) + ''d' + str( 0+i*(0)) + ''
+</code></pre>
+
+<p>若要將程式修改為128 的版本，就只要修改對應的參數即可：</p>
+
+<pre><code>for i in range(128):
+    print ' pin' + str( 0+i*(1)) + '&lt;= enable[' + str(i) + ']?' + str( 2+i*(0)) + ''d' + str( 0+i*(0)) + ':0;'
+</code></pre>
       </section>
     </div>
 
