Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="repeatedcodeinverse" class="anchor" href="#repeatedcodeinverse" aria-hidden="true"><span class="octicon octicon-link"></span></a>RepeatedCodeInverse</h1>
 
-<p>written by Yu-Sheng Chen</p>
+<p>written by <a href="mailto:ntuyusheng@gmail.com">ntuyusheng@gmail.com</a></p>
 
 <p>Convert a paragragh of codes or words with regular rules into a function with for loop and statements.
 找到數行程式碼中數字遞迴的規則，產生"以迴圈產生該原始碼的程式"</p>
