新增部份超連結

--- a/RepeatedCodeGenerator.html
+++ b/RepeatedCodeGenerator.html
@@ -24,6 +24,7 @@ reg [1:0] pin4;
     </textarea>
     <div class='circle_button' id="script_submit">Analyze</div>    
     <div class='circle_button' id="bt_regenerate">Re-gen</div>
+	
     <div id="step1">step1: import your source code with repeatitive pattern.<br>
     <a href="javascript:load_example1();">Example 1</a>
     <a href="javascript:load_example2();">Example 2</a>
@@ -34,7 +35,7 @@ reg [1:0] pin4;
         <div id="console_msg"></div>
     </div>
     <div id="user_inf">
-        Contact: <address>ntuyusheng@gmail.com</address> the source code is hosted on <a href="">GitHub</a>. 
+        Contact: <address>ntuyusheng@gmail.com</address> the source code is hosted on <a target="_blank" href="http://pedroid.github.io/RepeatedCodeInverse/">GitHub</a>. 
     </div>
     </form>
     <div id="visitor_counter" style="text-align:center;">
